--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Coderwall Android
 =================
 
 This is a simple android app that uses the single Coderwall API endpoint.
+
+The interesting stuff is in assets/www.
